<resources>
    <string name="app_name">Tienda Virtual</string>
    <string name="inicio_v">Inicio</string>
    <string name="mi_tienda">Mi tienda</string>
    <string name="rese_as">Reseñas</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="mis_productos_v">Mis Productos</string>
    <string name="mis_ordenes_v">Mis ordenes</string>
    <string name="binevenido_a">Binevenido (a)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_tienda_fragment">MI TIENDA</string>
    <string name="mis_productos_fragment">MIS PRODUCTOS</string>
    <string name="ordenes_fragment">ORDENES</string>
    <string name="rese_as_fragment">RESEÑAS</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="registro_vendedor">Registro Vendedor</string>
    <string name="nombres">Nombres</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="login_vendedor">Login Vendedor</string>
    <string name="email_vendedor">Email</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="registrarme_vendedor">Registrarme</string>
    <string name="agregar_productos">Agregar Productos</string>
    <string name="inicio_cliente">Inicio</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="cerrar_secion_cliente">Cerrar Sesión</string>
    <string name="tienda_cliente">Tienda</string>
</resources>