<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendedor.LoginVendedorActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >
    <TextView
        android:text="@string/login_vendedor"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/registro_vendedor"
            android:layout_width="80dp"
            android:layout_height="80dp">

        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:drawableStart="@drawable/ico_email"
                android:hint="@string/email_vendedor"
                android:id="@+id/etEmail_vendedor"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:hint="@string/contrase_a"
                android:drawableStart="@drawable/ico_password"
                android:drawablePadding="10dp"
                android:id="@+id/etPassword_vendedor"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresarV"
            android:text="@string/ingresar"
            app:cornerRadius="8dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:text="@string/no_tienes_cuenta"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:text="@string/registrarme_vendedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegistroVendedor"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/celeste_oscuro"
            >

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>