<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendedor.RegistroVendedorActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >
        <TextView
            android:text="@string/registro_vendedor"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/vendedor"
            android:layout_marginBottom="10dp"
            android:layout_height="80dp">

        </ImageView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etNombres"
                android:drawableStart="@drawable/ico_nombres"
                android:drawablePadding="5dp"
                android:hint="@string/nombres"
                android:inputType="textPersonName|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etEmail"
                android:hint="@string/email"
                android:drawableStart="@drawable/ico_email"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:id="@+id/etPassword"
                android:hint="@string/contrase_a"
                android:drawableStart="@drawable/ico_password"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:id="@+id/etCPassword"
                android:drawableStart="@drawable/ico_password"
                android:drawablePadding="5dp"
                android:hint="@string/confirmar_contrase_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarV"
            android:text="@string/registrarme"
            app:cornerRadius="8dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</ScrollView>